[package]
name = "closure_and_enumeration"
version = "0.1.0"
authors = ["huangzhongjun@sisyphe.com.cn <huangzhongjun@sisyphe.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3