[package]
authors = ["huangzhongjun@sisyphe.com.cn <huangzhongjun@sisyphe.com.cn>"]
edition = "2018"
name = "work"
version = "0.1.0"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
